# onnx-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.example.yaml
.cache/clangd/index/: batch_executor.cpp.A22570B51BDDB048.idx  batch_executor.hpp.FEF0842945016DB4.idx  collector.cpp.FAFFCB461B3C2A0C.idx  collector.hpp.9EEE00F3F7679AA9.idx  config.cpp.6FC4756F50D43459.idx  config.hpp.36E4AEBFB06F32DE.idx  handlers.cpp.0F15C6D35D88827B.idx  handlers.hpp.D8639ADE06AC807C.idx  http_server.cpp.BD44148344654BF1.idx  http_server.hpp.2BF6A2305B84BCDD.idx  httplib.h.084E5345A7009CCD.idx  json.hpp.8BD0DF0D63ADC2CA.idx  logging.cpp.AD4D30FF653BCFD9.idx  logging.hpp.DA564D1A033F365A.idx  main.cpp.B1121B17261682A3.idx  model_registry.cpp.C3ED01297A7196B3.idx  model_registry.hpp.06C06A9939F7791A.idx  onnxruntime_c_api.h.014952333F088821.idx  onnxruntime_cxx_api.h.D3091E60FF33704A.idx  onnxruntime_cxx_inline.h.723C4F97B16F6AF3.idx  onnxruntime_float16.h.45067484FDC1A696.idx  prometheus.cpp.5622EBBBB66C8115.idx  prometheus.hpp.AFA8AB88EB5574D8.idx  router.cpp.357EE2D149DAD047.idx  router.hpp.C01C9C7261C20FBB.idx  session_manager.cpp.F8ED8D0D3705A87A.idx  session_manager.hpp.A1F2D4FE6D3DF5D3.idx  thread_pool.cpp.00C594ABDAFCAFD5.idx  thread_pool.hpp.3BA277F94D396ECC.idx
cmake/: arm-toolchain.cmake  jetson-toolchain.cmake
docker/: Dockerfile.cuda  Dockerfile.edge  Dockerfile.full
docs/: API.md  DEPLOYMENT.md
examples/: create_sample_model.py  curl_examples.sh  python_client.py
include/onnx_server/: onnx_server.hpp
models/: README.md
src/: main.cpp
src/inference/: batch_executor.cpp  batch_executor.hpp  model_registry.cpp  model_registry.hpp  session_manager.cpp  session_manager.hpp
src/metrics/: collector.cpp  collector.hpp  prometheus.cpp  prometheus.hpp
src/server/: handlers.cpp  handlers.hpp  http_server.cpp  http_server.hpp  router.cpp  router.hpp
src/utils/: config.cpp  config.hpp  logging.cpp  logging.hpp  thread_pool.cpp  thread_pool.hpp
